Changes in 21.7
===============
	* Upgraded SELinux code to new api, thanks to Chris PeBenito

Changes in 21.6
===============

2005-03-11
	* Minor typo (specificiation) fixed
	* Added closing bracket in fuser help
	* Added Finnish translation
	* Localised the yes/no prompts with rpmatch()
	* Fixed NLS problems and some double ))s - Thanks to Jakub Bogusz
	* Added Basque translation
	* More NLS related fixes - Thanks to Guillem Jover
	* killall aborts if it gets unknown flags Debian #250794
	* Symbolic link created properly for pstree.x11 Debian #250096
	* Strange mount points handled better Debian #178972
	* Added Catalan translation
	* killall can be case insenstive now
	* Warning in killall.1 about process changing names Debian #187941
	* Removed include termcap.h to fix RH include problem.
	* Added Vietnamese translation
	* Fixed --enable-flask logic SF#1094205
	* Added Norwegian Bokmaal translation
	* Fixed groff madness with fuser(1) Debian #298199

Changes in 21.5
===============
2004-05-25 Craig Small <csmall@small.dropbear.id.au>
	* Sven Dahl provides a patch for using psmisc with uclibc
	* Sid flag in options is d not S. SF#791537
	* Fixed typo in checking ss_family SF#845292
	* Lines not truncated using UTF-8 SF Patch: #757164 Debian: #151523
	* Case insensitve matching with -I flags SF Patch: #740662
	* inode and devices use ino_t and dev_t SF#: 
	* Allow pstree to use ASCII characters with -A flag, patch by
	  Branden Robinson Debian: #240973
	* Debug "here" statement removed
	* POSIX -m option added, part of SF Bug: #901841
	* fuser sends PIDs only to stdout, the rest goes to stderr.
	  Changed for POSIX compatibility
	* Silently ignore -f option, for POSIX
	* Using automake 1.8 now
	* Built source signames.h not distributed in tar Debian: #240986
	* Manual page for fuser explains -SIG is ignored with no -k
	  Debian: #222935

2004-04-05  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add m4.
	(SUBDIRS): Remove intl.