@@ -1,6 +1,7 @@
 Changes in 21.7
 ===============
 	* Upgraded SELinux code to new api, thanks to Chris PeBenito
+	* define rpmatch for libraries that dont have it
 
 Changes in 21.6
 ===============
